--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,9 @@
-
-node('maven-label') {
+node {
    def mvnHome
    stage('Preparation') { // for display purposes
-      // Get some code from a GitHub repository
-      git 'https://github.com/sapna1784/xcard1.git'
-                
+   
+     git branch: 'master', url: 'https://github.com/sapna1784/xcard1.git'
+      
       mvnHome = tool 'maven'
    }
    stage('Build') {
@@ -17,5 +16,6 @@ node('maven-label') {
    }
    stage('Results') {
       junit '**/target/surefire-reports/TEST-*.xml'
-      archiveArtifacts 'target/*.jar'
+      archive 'target/*.jar'
    }
+}
