--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-node {
+node('maven-label') {
    def mvnHome
    stage('Preparation') { // for display purposes
    
@@ -16,6 +16,6 @@ node {
    }
    stage('Results') {
       junit '**/target/surefire-reports/TEST-*.xml'
-      archive 'target/*.jar'
+      archiveArtifacts 'target/*.jar'
    }
 }
